--- a/Plugin_SongPoster/Plugin_SongPoster.csproj
+++ b/Plugin_SongPoster/Plugin_SongPoster.csproj
@@ -71,9 +71,9 @@
     <ApplicationIcon>32512.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PluginInterface">
-      <HintPath>lib\PluginInterface.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="PluginInterface, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\RadioDJ\PluginInterface.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
