UI: Only one Enable checkbox, move post template to first tab, rename autoconf tab Backend: Handle error responses, Disable Posting, show a MessageBox and write log fille

--- a/Plugin_SongPoster/Plugin_SongPoster.csproj
+++ b/Plugin_SongPoster/Plugin_SongPoster.csproj
@@ -26,6 +26,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -104,6 +105,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="SongPoster_Config.resx">
       <DependentUpon>SongPoster_Config.cs</DependentUpon>
